<?xml version="1.0"?>
<package format="2">.
  <name>mi_msgs</name>
  <version>0.8.0</version>
  <description>mi_lab message types.</description>

  <maintainer email="parkmingyu11@sch.ac.kr">Min Gyu Park</maintainer>
  <author email="parkmingyu11@sch.ac.kr">MI_Lab</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/can_msgs</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
